--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap-icons": "^1.11.3",
+        "bootstrap-select": "^1.13.18",
+        "jquery": "^3.7.1"
     }
 }
