--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "phattarachai/laravel-mobile-detect": "^1.0",
-        "twbs/bootstrap-icons": "^1.11"
+        "twbs/bootstrap-icons": "^1.11",
+        "yajra/laravel-datatables": "11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
