--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "bootstrap": "^5.3.3",
+        "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "sass-embedded": "^1.79.4",
